# agentscope-samples

./: README.md  pyproject.toml  setup.py
agentic_rl/react_agent/: README.md  config.yaml  main.py
browser_use/agent_browser/: README.md  browser_agent.py  main.py  requirements.txt
browser_use/browser_use_fullstack_runtime/backend/: agentscope_browseruse_agent.py  (+2 more)
conversational_agents/chatbot/: main.py
conversational_agents/chatbot_fullstack_runtime/: README.md
conversational_agents/multiagent_debate/: main.py
deep_research/agent_deep_research/: deep_research_agent.py  main.py  utils.py
deep_research/qwen_langgraph_search_fullstack_runtime/: requirements.txt
evaluation/ace_bench/: main.py
functionality/long_term_memory_mem0/: memory_example.py  requirements.txt
functionality/mcp/: README.md  main.py  mcp_add.py  mcp_multiply.py
functionality/meta_planner_agent/: _meta_planner.py  main.py
functionality/multiagent_concurrent/: main.py
functionality/plan/: main_agent_managed_plan.py  main_manual_plan.py
functionality/rag/: agentic_usage.py  basic_usage.py  multimodal_rag.py  react_agent_integration.py  requirements.txt
functionality/session_with_sqlite/: main.py
functionality/stream_printing_messages/: single_agent.py
functionality/structured_output/: main.py
games/game_werewolves/: game.py  main.py  prompt.py  requirements.txt  structured_model.py  utils.py
tests/: agent_deep_research_test.py  browser_agent_test.py  evaluation_test.py  functionality_agent_plan_test.py  functionality_mcp_test.py  functionality_plan_test.py
(+16 files in other folders)
