[project]
name = "agentscope-samples"
version = "0.1.0"
description = "AgentScope Sample Agents: Ready-to-use multi-agent examples built on AgentScope and AgentScope Runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
full = [
  "agentscope[dev]",
  "agentscope_runtime",
  "pyyaml",
  "quart",
  "quart-cors",
  "flask_sqlalchemy",
  "flask",
  "flask_cors",
]
dev = [
  "pre-commit",
  "pytest",
  "sphinx-gallery",
  "furo",
  "myst_parser",
  "matplotlib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"